--- a/my-first-app/package.json
+++ b/my-first-app/package.json
@@ -18,6 +18,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "jwt-decode": "^2.2.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-image-picker": "^0.26.10",
