--- a/my-first-app/app.json
+++ b/my-first-app/app.json
@@ -2,6 +2,6 @@
   "expo": {
     "sdkVersion": "27.0.0"
   },
-  "name": "myfirstapp",
-  "displayName": "Awesome Places"
+  "name": "roadmontrip",
+  "displayName": "RoadMonTrip"
 }
